fix color contrast issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
   --dark-purple: #C892C7;
   --pink: #FDC9DE;
   --peach: #FFDFDB;
-  --text-color: rgb(36, 33, 45);
+  --text-color: rgb(41, 36, 55);
 }
 * {
   box-sizing: border-box;
@@ -20,9 +20,7 @@ body {
   justify-content: center;
   align-items: center;
 }
-h1{
-  color: white;
-}
+
 a {
   text-decoration: none;
 }
@@ -53,9 +51,13 @@ li:hover:not(.active) {
 .active {
   background-color: var(--indigo);
 }
-/* li:first-child{
-  padding: 0 0.5em;
-} */
+.active > a {
+  color: white;
+}
+
+li:first-child{
+  padding: 8px 0.5em;
+}
 #menu-logo{
   width: 37px;
 }
